RESOLVED FIXED121381
[GTK] The web inspector is not rendered when docked in WebKit2 when AC is used
https://bugs.webkit.org/show_bug.cgi?id=121381
Summary [GTK] The web inspector is not rendered when docked in WebKit2 when AC is used
Carlos Garcia Campos
Reported 2013-09-15 02:55:27 PDT
If accelerated compositing is used, only the redirected window is drawn when the web inspector view is attached to the web view. This is not a problem of the new web inspector, it also happened before with the old one.
Attachments
Patch (1.54 KB, patch)
2013-09-15 02:59 PDT, Carlos Garcia Campos
mrobinson: review+
Carlos Garcia Campos
Comment 1 2013-09-15 02:59:36 PDT
WebKit Commit Bot
Comment 2 2013-09-15 03:01:28 PDT
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Carlos Garcia Campos
Comment 3 2013-09-15 10:40:51 PDT
Note You need to log in before you can comment on or make changes to this bug.