[GTK] The web inspector is not rendered when docked in WebKit2 when AC is used https://bugs.webkit.org/show_bug.cgi?id=121381

Reviewed by Martin Robinson.

When accelerated compositing results are rendered we return early
from webkitWebViewBaseDraw and other WebView children are not
drawn. We need to chain up the draw signal handler, so that the
GtkContainer propagates the draw to all its children.

* UIProcess/API/gtk/WebKitWebViewBase.cpp:
(webkitWebViewBaseDraw):

Canonical link: https://commits.webkit.org/139371@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@155814 268f45cc-cd09-0410-ab3c-d52691b4dbfc